# Daemon

./: .appveyor.yml  .gitattributes  .gitignore  .gitmodules  .travis.yml  API_CHANGES.md  CMakeLists.txt  COPYING.txt  LICENSE-DAEMON-VULKAN.txt  README.md  appveyor.yml  azure-pipelines.yml  daemon.conf.template  daemon.ini.template  freetype.cmake  gameinfo.conf.template  meson.build  src.cmake  srclibs.cmake
libs/: meson.build
libs/VulkanHeaders/: FeaturesConfig.cpp  GenerateAll.py  Globals.py  Vulkan.cpp  Vulkan.h  VulkanLoadFunctions.cpp  cgenerator.py  generator.py  genvk.py  reg.py
libs/crunch/: crn_decomp.h  crnlib.h
libs/findlocale/: findlocale.c
libs/libRocket/: CMakeLists.txt
libs/minizip/: ioapi.c
libs/nacl/: meson.build
libs/pdcurses/win32a/: pdcscrn.c  pdcutil.c
libs/tinyformat/: TinyformatTest.cpp  tinyformat.h
libs/tinygettext/: po_parser.cpp
libs/tomlc17/: README.md  tomlc17.c  tomlc17.h  update.sh
src/: meson.build
src/common/: Assert.h  CPPStandard.h  Color.cpp  Color.h  ColorTest.cpp  Command.cpp  Command.h  Common.h  Compiler.h  Cvar.cpp  Cvar.h  CvarTest.cpp  DebugDraw.cpp  DebugDraw.h  Debugger.cpp  Defs.h  EmbeddedFile.h  Endian.h  FileSystem.cpp  FileSystem.h  FileSystemTest.cpp  KeyIdentification.cpp  KeyIdentification.h  Log.cpp  Log.h  LogBase.h  LogLocal.h  Math.h  MathTest.cpp  Optional.h  Platform.h  README.md  Serialize.h  StackTrace.h  String.cpp  String.h  StringTest.cpp  System.cpp  System.h  Type.h  (+3 more)
src/common/IPC/: Channel.h  CommandBuffer.cpp  CommandBuffer.h  Common.h  CommonSyscalls.h  Primitives.cpp  Primitives.h  README.md
src/common/cm/: README.md  cm_load.cpp  cm_local.h  cm_marks.cpp  cm_patch.cpp  cm_patch.h  cm_plane.cpp  cm_polylib.cpp  cm_polylib.h  cm_public.h  cm_test.cpp  cm_trace.cpp  cm_trisoup.cpp  unittest.cpp
src/common/math/: Constant.h  Constants.h  Vector.h
src/dummygame/: CMakeLists.txt  cgame.cpp
src/engine/: Daemon.vcxproj  README.md  RefAPI.h
src/engine/Base/: Base.cmake  BaseCVars.cpp  BaseCVars.h  BaseDecls.h  Error.cpp  Error.h  Int.h  Parser.h  Task.cpp  Task.h  Timer.cpp  Timer.h  Version.cpp  Version.h
src/engine/Base/Math/: Bit.h
src/engine/Base/Memory/: Allocator.h  Array.h  BitStream.cpp  BitStream.h  DynamicArray.h  Memory.h  MemoryChunk.h  MemoryChunkSystem.cpp  MemoryChunkSystem.h  RingBuffer.h  RingBufferArray.h  StackAllocator.cpp  StackAllocator.h  SysAllocator.cpp  SysAllocator.h
src/engine/Base/SrcDebug/: Tag.cpp  (+2 more)
src/engine/audio/: ALObjects.cpp  ALObjects.h  Audio.cpp  Audio.h  AudioData.h  AudioPrivate.h  Emitter.cpp  Emitter.h  OggCodec.cpp  OpusCodec.cpp  Sample.cpp  Sample.h  Sound.cpp  Sound.h  SoundCodec.cpp  WavCodec.cpp
src/engine/botlib/: bot_api.h  bot_convert.h  bot_debug.cpp  bot_debug.h  bot_load.cpp  bot_local.cpp  bot_local.h  bot_nav.cpp  bot_nav_edit.cpp  bot_navdraw.h  nav.h
src/engine/client/: ClientApplication.cpp  cg_api.h  cg_msgdef.h  cin_ogm.cpp  cl_avi.cpp  cl_cgame.cpp  cl_cin.cpp  cl_console.cpp  cl_download.cpp  cl_input.cpp  cl_irc.cpp  cl_keys.cpp  cl_main.cpp  cl_parse.cpp  cl_scrn.cpp  cl_serverlist.cpp  cl_serverstatus.cpp  client.h  dl_main.cpp  hunk_allocator.cpp  key_binding.cpp  key_identification.cpp  key_identification.h  keycodes.h  keys.h  rocket.cpp  rocketElement.h
src/engine/crash_server/: README.md  crash_server_linux.cpp
src/engine/framework/: Application.cpp  Application.h  ApplicationInternals.h  BaseCommands.cpp  CommandBufferHost.cpp  CommandBufferHost.h  CommandSystem.cpp  CommandSystem.h  CommandSystemTest.cpp  CommonVMServices.cpp  CommonVMServices.h  ConsoleField.cpp  ConsoleHistory.cpp  ConsoleHistory.h  CrashDump.cpp  Crypto.cpp  CvarSystem.cpp  CvarSystem.h  DebugDrawSystem.cpp  DebugDrawSystem.h  GameInfo.cpp  GameInfo.h  LogSystem.cpp  LogSystem.h  Network.cpp  Network.h  Omp.cpp  Omp.h  OmpSystem.cpp  OmpSystem.h  README.md  Rcon.cpp  Rcon.h  Resource.cpp  Resource.h  System.cpp  VirtualMachine.cpp  VirtualMachine.h
src/engine/null/: NullApplication.cpp  NullAudio.cpp  NullKeyboard.cpp  README.md  null_client.cpp  null_input.cpp  null_renderer.cpp
src/engine/qcommon/: PrintDepVersions.cpp  README.md  SurfaceFlags.h  cmd.cpp  common.cpp  crypto.h  cvar.cpp  cvar.h  files.cpp  gameinfo.cpp  gameinfo.h  huffman.cpp  logging.h  md5.cpp  msg.cpp  msg_punned.cpp  net_chan.cpp  net_ip.cpp  net_types.h  parse.cpp  print_translated.h  q_math.cpp  q_math.h  q_math_test.cpp  q_shared.cpp  q_shared.h  q_unicode.cpp  q_unicode.h  qcommon.h  qfiles.h  sys.h  translation.cpp
src/engine/renderer/: .gitignore  BufferBind.h  DetectGLVendors.cpp  DetectGLVendors.h  EntityCache.cpp  EntityCache.h  GLMemory.cpp  GLMemory.h  GLUtils.h  GeometryCache.cpp  GeometryCache.h  GeometryOptimiser.cpp  GeometryOptimiser.h  InternalImage.cpp  InternalImage.h  Material.cpp  Material.h  ShadeCommon.h  TextureManager.cpp  TextureManager.h  TimerQuery.cpp  TimerQuery.h  VBO.h  VertexSpecification.h  gl_config.cpp  gl_shader.cpp  gl_shader.h  gl_shader_test.cpp  iqm.h  renderer.vcxproj  shader_test_app.cpp  shaders.cpp  src.cmake  tr_animation.cpp  tr_backend.cpp  tr_bsp.cpp  tr_bsp_punned.cpp  tr_cmds.cpp  tr_curve.cpp  tr_decals.cpp  (+37 more)
src/engine/renderer-vulkan/: DispatchRawData.cpp  DispatchRawData.h  Error.cpp  Error.h  GraphicsEngineProcessor.cpp  Init.cpp  Init.h  MiscCVarStore.cpp  MiscCVarStore.h  Parser.cpp  Parser.h  RefAPI.cpp  RefAPI.h  Version.cpp  Version.h  src.cmake
src/engine/rendererGL/: rendererGL.vcxproj
src/engine/server/: README.md  ServerApplication.cpp  server.h  sg_api.h  sg_msgdef.h  sv_bot.cpp  sv_ccmds.cpp  sv_client.cpp  sv_init.cpp  sv_main.cpp  sv_net_chan.cpp  sv_sgame.cpp  sv_snapshot.cpp
src/engine/snd_openal/: snd_openal.vcxproj
src/engine/sys/: DisableAccentMenu.m  README.md  con_common.cpp  con_common.h  con_curses.cpp  con_passive.cpp  con_tty.cpp  sdl_glimp.cpp  sdl_input.cpp  sys_events.h
src/shared/: CommandBufferClient.cpp  CommonProxies.cpp  CommonProxies.h  README.md  VMMain.cpp  VMMain.h
src/shared/client/: cg_api.cpp  cg_api.h
src/shared/server/: sg_api.cpp  sg_api.h
(+410 files in other folders)
